--- a/.config
+++ b/.config
@@ -459,6 +459,7 @@ CONFIG_FEED_routing=y
 CONFIG_FEED_telephony=y
 CONFIG_FEED_passwall_packages=y
 CONFIG_FEED_passwall_luci=y
+CONFIG_FEED_passwall2=y
 
 #
 # Base system
